Added fonts, animation

--- a/html/index.html
+++ b/html/index.html
@@ -3,34 +3,46 @@
 <head>
 	<title>AARON KRAJESKI</title>
 	<link rel="icon" href="../bin/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<script type="text/javascript" src="../js/jquery.min.js"></script>
+	<script type="text/javascript" src="../js/velocity.min.js"></script>
+	<script type="text/javascript" src="../js/script.js"></script>
 </head>
 <body>
 
-	<h1>Aaron Krajeski</h1>
-	<h2>Web and Interaction Designer</h2>
-	<table>
-		<tr>
-			<td>Portfolio</td>
-			<td>CV</td>
-			<td>Contact</td>
-		</tr>
-	</table>
+	<div id="aaronk">AARON KRAJESKI</div>
+	<h3>WEB AND INTERACTION DESIGNER</h3>
+	<div id="mainNavigation">
+		<div class="selected">PORTFOLIO</div>
+		<div>CV/BIO</div>
+		<div>CONTACT</div>
+	</div>
+	<div id='underline'></div>
 
-<!-- 	<div id="portfolio">
-		<h2>Interaction Design</h2>
-		<iframe src="http://player.vimeo.com/video/106615049" width="500" height="281" frameborder="0" allowfullscreen></iframe>
-		<iframe width="500" height="281" src="http://www.youtube.com/embed/FF7Eu5GGW6E" frameborder="0" allowfullscreen></iframe>
-		<iframe width="500" height="281" src="http://www.youtube.com/embed/Jdn3sfOFEQM" frameborder="0" allowfullscreen></iframe>
-		<iframe src="http://player.vimeo.com/video/57489444" width="500" height="281" frameborder="0" allowfullscreen></iframe> -->
+	<div id="portfolio">
+<!-- 		<div class="panel"id="interactiondesign">
+			<h2>INTERACTION DESIGN</h2>
+			<div><iframe src="http://player.vimeo.com/video/106615049" width="500" height="281" frameborder="0" allowfullscreen></iframe></div>
+			<div><iframe width="500" height="281" src="http://www.youtube.com/embed/FF7Eu5GGW6E" frameborder="0" allowfullscreen></iframe></div>
+			<div><iframe width="500" height="281" src="http://www.youtube.com/embed/Jdn3sfOFEQM" frameborder="0" allowfullscreen></iframe></div>
+			<div><iframe src="http://player.vimeo.com/video/57489444" width="500" height="281" frameborder="0" allowfullscreen></iframe></div>
+		</div>
 
-		<h2>Web Design</h2>
-		<iframe width="500" height="281" src="http://www.boulevardtranslation.com" frameborder="0" allowfullscreen></iframe>
-		<a href="http://www.misselizabethmusic.com">
-			<img src="../bin/misselizabeth.png"><img>
-		</a>
-		<iframe width="500" height="281" src="http://www.misselizabethmusic.com" frameborder="0" allowfullscreen></iframe>
-		<iframe width="500" height="281" src="http://www.farragoes.net" frameborder="0" allowfullscreen></iframe>
-
+		<div class="panel" id="webdesign">
+			<h2>WEB DESIGN</h2>
+			<div>
+					<iframe width="500" height="281" src="http://www.boulevardtranslation.com" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div>
+					<iframe width="500" height="281" src="http://www.elrichman.com" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div>
+				<a href="http://www.misselizabethmusic.com">
+					<img src="../bin/misselizabeth.png"><img>
+				</a>
+			</div>
+			<div><a href="http://www.farragoes.net"><img src="../bin/farragoes.png"><img></a></div>
+		</div> -->
 	</div>
 
 	<div id="cv">
@@ -38,9 +50,9 @@
 	</div>
 
 	<div id="contact">
-		<p>Github</p>
-		<p>Twitter</p>
-		<p>email?</p>
+		<p>GITHUB</p>
+		<p>TWITTER</p>
+		<p>EMAIL?</p>
 	</div>
 
 </body>
