Looking better, focus on content

--- a/html/index.html
+++ b/html/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
-	<div id="aaronk">AARON KRAJESKI</div>
-	<h3>WEB AND INTERACTION DESIGNER</h3>
+	<div id="mainTitle">AARON KRAJESKI</div>
+	<h2>Creative Technologist (...but you can call me Aaron)</h2>
 	<div id="mainNavigation">
-		<div class="selected">PORTFOLIO</div>
-		<div>CV/BIO</div>
-		<div>CONTACT</div>
+		<div class="selected"><h2>PORTFOLIO</h2></div>
+		<div><h2>CV</h2></div>
+		<div><h2>CONTACT</h2></div>
 	</div>
-	<div id='underline'></div>
+	<div id='underline'><div id="line"></div></div>
 
 	<div id="portfolio">
 <!-- 		<div class="panel"id="interactiondesign">
@@ -45,14 +45,29 @@
 		</div> -->
 	</div>
 
+<!-- Current project -->
+<!-- <iframe src="//player.vimeo.com/video/55825524" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+
 	<div id="cv">
-		<p>CV</p>
+		<h2 class="cvField">Skills</h2>
+			<strong>Programming Languages</strong> - Python, Javascript, C++<br>
+			<strong>Web Stuff</strong> - HTML, CSS, jQuery<br>
+			<strong>Frameworks</strong> - OpenFrameworks, MaxMSP, Matlab<br>
+			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino<br>
+			...and a bunch of other little stuff. Intermedia means we gotta be a ton of places at once! Just ask me.
+
+		<h2 class="cvField">Education</h2>
+		<p>
+			<strong>2013</strong> - M.A. in Music Technology, McGill University, Montr&eacute;al, Qu&eacute;bec <br>
+			<strong>2009</strong> - B.S. in Physics with a minor in Music, The College of William & Mary, Williamsburg, Virginia
+		</p>
+		<h2 class="cvField">Work</h2>
 	</div>
 
 	<div id="contact">
-		<p>GITHUB</p>
-		<p>TWITTER</p>
-		<p>EMAIL?</p>
+		<p>Email: <span id="email">krajeski at gmail dot com</span></p>
+		<p>Github: <a href="https://github.com/mysterydate">mysteryDate</a></p>
+		<p>Twitter: <a href="https://twitter.com/_mysteryDate">@_mysteryDate</a></p>
 	</div>
 
 </body>
