Added CV content

--- a/html/index.html
+++ b/html/index.html
@@ -50,22 +50,24 @@
 
 	<div id="cv">
 		<h2 class="cvField">Skills</h2>
+		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++<br>
 			<strong>Web Stuff</strong> - HTML, CSS, jQuery<br>
 			<strong>Frameworks</strong> - OpenFrameworks, MaxMSP, Matlab<br>
 			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino<br>
 			...and a bunch of other little stuff. Intermedia means we gotta be a ton of places at once! Just ask me.
-
+		</p>
 		<h2 class="cvField">Education</h2>
 		<p>
 			<strong>2013</strong> - M.A. in Music Technology, McGill University, Montr&eacute;al, Qu&eacute;bec <br>
+			<span class="subtitle">Researched graphical user interfaces for music in web-based platforms (<a href="http://idmil.org/_media/publications/krajeski_ma_thesis.pdf?id=theses&cache=cache">Thesis Paper</a>)</span><br>
 			<strong>2009</strong> - B.S. in Physics with a minor in Music, The College of William & Mary, Williamsburg, Virginia
 		</p>
 		<h2 class="cvField">Work</h2>
 	</div>
 
 	<div id="contact">
-		<p>Email: <span id="email">krajeski at gmail dot com</span></p>
+		<p>Email: <span id="email">krajeski [at] gmail [dot] com</span></p>
 		<p>Github: <a href="https://github.com/mysterydate">mysteryDate</a></p>
 		<p>Twitter: <a href="https://twitter.com/_mysteryDate">@_mysteryDate</a></p>
 	</div>
