Changed file structure

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>AARON KRAJESKI</title>
-	<link rel="icon" href="../bin/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<script type="text/javascript" src="../js/jquery.min.js"></script>
-	<script type="text/javascript" src="../js/velocity.min.js"></script>
-	<script type="text/javascript" src="../js/script.js"></script>
+	<link rel="icon" href="bin/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/velocity.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 
@@ -38,10 +38,10 @@
 			</div>
 			<div>
 				<a href="http://www.misselizabethmusic.com">
-					<img src="../bin/misselizabeth.png"><img>
+					<img src="bin/misselizabeth.png"><img>
 				</a>
 			</div>
-			<div><a href="http://www.farragoes.net"><img src="../bin/farragoes.png"><img></a></div>
+			<div><a href="http://www.farragoes.net"><img src="bin/farragoes.png"><img></a></div>
 		</div> -->
 	</div>
 
