--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-	<div id="mainTitle">AARON KRAJESKI</div>
+	<div id="mainTitle">AARON KRAJESKI
+	<img id="gifLogo" src="bin/3sided3.gif"></img></div>
 	<h2>Creative Technologist (...but you can call me Aaron)</h2>
 	<div id="mainNavigation">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
@@ -55,21 +56,42 @@
 			<strong>Web Stuff</strong> - HTML, CSS, jQuery<br>
 			<strong>Frameworks</strong> - OpenFrameworks, MaxMSP, Matlab<br>
 			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino<br>
-			...and a bunch of other little stuff. Intermedia means we gotta be a ton of places at once! Just ask me.
+			<span class="sub">...and a bunch of other little stuff. Intermedia means we gotta be a ton of places at once! Just ask me.</span>
 		</p>
 		<h2 class="cvField">Education</h2>
 		<p>
 			<strong>2013</strong> - M.A. in Music Technology, McGill University, Montr&eacute;al, Qu&eacute;bec <br>
-			<span class="subtitle">Researched graphical user interfaces for music in web-based platforms (<a href="http://idmil.org/_media/publications/krajeski_ma_thesis.pdf?id=theses&cache=cache">Thesis Paper</a>)</span><br>
+			<span class="sub">Researched graphical user interfaces for music in web-based platforms (<a href="http://idmil.org/_media/publications/krajeski_ma_thesis.pdf?id=theses&cache=cache">Thesis Paper</a>)</span><br>
 			<strong>2009</strong> - B.S. in Physics with a minor in Music, The College of William & Mary, Williamsburg, Virginia
 		</p>
 		<h2 class="cvField">Work</h2>
+		<p class="cvEntry">
+			<strong>Installation Programmer</strong> : September 2014 -  <br>
+			<span class="sub">Worked with <a href="playmind.com">PLAYMIND</a> and the city of Joliette, QC to create an interactive installation for the 150th anniversary of the city [LINK TO PROJECT]</span>
+		<p>
+		<p class="cvEntry">
+			<strong>Museum Exhibit Programmer</strong> : April 2014 - July 2014 <br>
+			<span class="sub">Worked with <a href="playmind.com">PLAYMIND</a> and La Mus&eacute;e Regional D'Argenteuil to create an interactive exhibit concerning the history of Argenteuil, QC</span>
+		</p>
+		<p class="cvEntry">
+			<strong>Independent Web Designer</strong> : August 2013 - <br>
+			<span class="sub">Independently created websites such as <a href="boulevardtranslation.com">boulevardtranslation.com</a> and <a href="elrichman.com">elrichman.com</a>.</span>
+		</p>
+		<p class="cvEntry">
+			<strong>User Interface Designer</strong> : February 2013 - December 2013 <br>
+			<span class="sub">Worked with <a href="http://deeplistening.org/site/adaptiveuse">AUMI</a> to create the Adapitve Use Musical Instrument, a digital interface designed for musical collaboration among children with physical disabilities</span>
+		</p>
+		<p class="cvEntry">
+			<strong>Interaction Design Intern</strong> : April 2012 - August 2012 <br>
+			<span class="sub">Worked at <a href="http://infusionsystems.com/catalog/">Infusion Systems</a> on software for sensor interfaces. Also worked to create installations and promotional material for the system.</span>
+		</p>
 	</div>
 
 	<div id="contact">
 		<p>Email: <span id="email">krajeski [at] gmail [dot] com</span></p>
 		<p>Github: <a href="https://github.com/mysterydate">mysteryDate</a></p>
-		<p>Twitter: <a href="https://twitter.com/_mysteryDate">@_mysteryDate</a></p>
+		<p>Twitter: <a href="https://twitter.com/_mysteryDate">@_mysteryDate</a>
+		<br><span class="sub">You can email me and ask me for my phone number, I'm not so silly as to put it online!</span></p>
 	</div>
 
 </body>
