Fixed some styling

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
 	<div id="mainTitle">AARON KRAJESKI
-	<img id="gifLogo" src="bin/3sided4.gif"></img></div>
-	<h2>Creative Technologist (...but you can call me Aaron)</h2>
+		<img id="gifLogo" src="bin/3sided4.gif"></img>
+	</div>
+	<h2>Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
 	<div id="mainNavigation">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
 		<div><h2>CV</h2></div>
@@ -21,7 +22,7 @@
 	<div id='underline'><div id="line"></div></div>
 
 	<div id="portfolio">
-<!-- 		<div class="panel"id="interactiondesign">
+		<div class="panel"id="interactiondesign">
 			<h2>INTERACTION DESIGN</h2>
 			<div><iframe src="http://player.vimeo.com/video/106615049" width="500" height="281" frameborder="0" allowfullscreen></iframe></div>
 			<div><iframe width="500" height="281" src="http://www.youtube.com/embed/FF7Eu5GGW6E" frameborder="0" allowfullscreen></iframe></div>
@@ -43,7 +44,7 @@
 				</a>
 			</div>
 			<div><a href="http://www.farragoes.net"><img src="bin/farragoes.png"><img></a></div>
-		</div> -->
+		</div>
 	</div>
 
 <!-- Current project -->
