--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 	<div id='underline'><div id="line"></div></div>
 
-	<div id="portfolio">
+	<div class="section" id="portfolio">
 		<div class="panel"id="interactiondesign">
 			<h2>INTERACTION DESIGN</h2>
 			<div><iframe src="http://player.vimeo.com/video/106615049" width="500" height="281" frameborder="0" allowfullscreen></iframe></div>
@@ -50,7 +50,7 @@
 <!-- Current project -->
 <!-- <iframe src="//player.vimeo.com/video/55825524" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
-	<div id="cv">
+	<div class="section" id="cv">
 		<h2 class="cvField">Skills</h2>
 		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++<br>
@@ -88,7 +88,7 @@
 		</p>
 	</div>
 
-	<div id="contact">
+	<div class="section" id="contact">
 		<p>Email: <span id="email">krajeski [at] gmail [dot] com</span></p>
 		<p>Github: <a href="https://github.com/mysterydate">mysteryDate</a></p>
 		<p>Twitter: <a href="https://twitter.com/_mysteryDate">@_mysteryDate</a>
