Created data file, dynamic

--- a/index.html
+++ b/index.html
@@ -22,33 +22,15 @@
 	<div id='underline'><div id="line"></div></div>
 
 	<div class="section" id="portfolio">
-		<div class="panel"id="interactiondesign">
-			<h2>INTERACTION DESIGN</h2>
-			<div><iframe src="http://player.vimeo.com/video/106615049" width="500" height="281" frameborder="0" allowfullscreen></iframe></div>
-			<div><iframe width="500" height="281" src="http://www.youtube.com/embed/FF7Eu5GGW6E" frameborder="0" allowfullscreen></iframe></div>
-			<div><iframe width="500" height="281" src="http://www.youtube.com/embed/Jdn3sfOFEQM" frameborder="0" allowfullscreen></iframe></div>
-			<div><iframe src="http://player.vimeo.com/video/57489444" width="500" height="281" frameborder="0" allowfullscreen></iframe></div>
+		<div id="mainScreen">
 		</div>
-
-		<div class="panel" id="webdesign">
+		<div class="panel"id="interaction">
+			<h2>INTERACTION DESIGN</h2>
+		</div>
+		<div class="panel"id="webdesign">
 			<h2>WEB DESIGN</h2>
-			<div>
-					<iframe width="500" height="281" src="http://www.boulevardtranslation.com" frameborder="0" allowfullscreen></iframe>
-			</div>
-			<div>
-					<iframe width="500" height="281" src="http://www.elrichman.com" frameborder="0" allowfullscreen></iframe>
-			</div>
-			<div>
-				<a href="http://www.misselizabethmusic.com">
-					<img src="bin/misselizabeth.png"><img>
-				</a>
-			</div>
-			<div><a href="http://www.farragoes.net"><img src="bin/farragoes.png"><img></a></div>
 		</div>
 	</div>
-
-<!-- Current project -->
-<!-- <iframe src="//player.vimeo.com/video/55825524" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
 	<div class="section" id="cv">
 		<h2 class="cvField">Skills</h2>
@@ -89,10 +71,13 @@
 	</div>
 
 	<div class="section" id="contact">
-		<p>Email: <span id="email">krajeski [at] gmail [dot] com</span></p>
-		<p>Github: <a href="https://github.com/mysterydate">mysteryDate</a></p>
-		<p>Twitter: <a href="https://twitter.com/_mysteryDate">@_mysteryDate</a>
-		<br><span class="sub">You can email me and ask me for my phone number, I'm not so silly as to put it online!</span></p>
+		<h2 class="contactField">Email</h2>
+		<p><span id="email">krajeski [at] gmail [dot] com</span></p>
+		<h2 class="contactField">Github</h2>
+		<p><a href="https://github.com/mysterydate">mysteryDate</a></p>
+		<h2 class="contactField">Twitter</h2>
+		<p><a href="https://twitter.com/_mysteryDate">@_mysteryDate</a></p>
+		<p><span class="sub">You can email me and ask me for my phone number, I'm not so silly as to put it online!</span></p>
 	</div>
 
 </body>
