Basic main screen functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div id="mainTitle">AARON KRAJESKI
-		<img id="gifLogo" src="bin/3sided4.gif"></img>
+		<!-- <img id="gifLogo" src="bin/3sided4.gif"></img> -->
 	</div>
 	<h2>Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
 	<div id="mainNavigation">
@@ -23,6 +23,9 @@
 
 	<div class="section" id="portfolio">
 		<div id="mainScreen">
+			<iframe frameborder='0' allowfullscreen></iframe>
+			<p class='description'></p>
+			<div id='closeSwitch'></div>
 		</div>
 		<div class="panel"id="interaction">
 			<h2>INTERACTION DESIGN</h2>
