--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div id="mainTitle">AARON KRAJESKI
-		<!-- <img id="gifLogo" src="bin/3sided4.gif"></img> -->
+		<img id="gifLogo" src="bin/3sided4.gif"></img>
 	</div>
 	<h2>Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
 	<div id="mainNavigation">
