Everything but the logo

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
 
-	<div id="mainTitle">AARON KRAJESKI
+	<div id="mainTitle">
+		<div id="name">AARON KRAJESKI</div>
 		<!-- <img id="gifLogo" src="bin/3sided4.gif"></img> -->
+		<h2>Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
 	</div>
-	<h2>Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
-	<div id="mainNavigation">
+	<div id="mainNavigation" class="startHidden">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
 		<div><h2>CV</h2></div>
 		<div><h2>CONTACT</h2></div>
 	</div>
-	<div id='underline'><div id="line"></div></div>
+	<div id='underline' class="startHidden"><div id="line"></div></div>
 
 	<div class="section" id="portfolio">
 		<div id="mainScreen">
