Added gif stuff

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 	<div id="mainTitle">
 		<div id="name">AARON KRAJESKI</div>
-		<!-- <img id="gifLogo" src="bin/3sided4.gif"></img> -->
-		<h2>Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
+		<img id="gifLogo" src="bin/rainbowblocks4-frame1.jpg"></img>
+		<h2 class="startHidden">Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
 	</div>
 	<div id="mainNavigation" class="startHidden">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
