Changing some logo stuff

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div id="mainTitle">
 		<div id="name">AARON KRAJESKI</div>
-		<img id="gifLogo" src="bin/rainbowblocks4-frame1.jpg"></img>
+		<img id="gifLogo" src="bin/logo-frame1.jpg"></img>
 		<h2 class="startHidden">Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
 	</div>
 	<div id="mainNavigation" class="startHidden">
