Changed mailto link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 	<div class="section" id="contact">
 		<h2 class="contactField">Email</h2>
-		<p><span id="email">krajeski [at] gmail [dot] com</span></p>
+		<p><a href="mailto:ak@aaronk.is?Subject=Hey%20Aaron!" target="_top">ak@aaronk.is</a></p>
 		<h2 class="contactField">Github</h2>
 		<p><a href="https://github.com/mysterydate">mysteryDate</a></p>
 		<h2 class="contactField">Twitter</h2>
