Update cv and some styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="mainTitle">
 		<div id="name">AARON KRAJESKI</div>
 		<img id="gifLogo" src="bin/logo-frame1.jpg"></img>
-		<h2 class="startHidden">Creative Technologist <span class="sub">(...but you can just call me Aaron)</span></h2>
+		<h2 class="startHidden">Multimedia Technologist</h2>
 	</div>
 	<div id="mainNavigation" class="startHidden">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
@@ -50,10 +50,9 @@
 		<h2 class="cvField">Skills</h2>
 		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++<br>
-			<strong>Web Stuff</strong> - HTML, CSS, jQuery<br>
-			<strong>Frameworks</strong> - OpenFrameworks, MaxMSP, Matlab<br>
+			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL<br>
+			<strong>Frameworks</strong> - Unity3D, OpenFrameworks, MaxMSP, Matlab<br>
 			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino<br>
-			<span class="sub">...and a bunch of other little stuff. Intermedia means we gotta be a ton of places at once! Just ask me.</span>
 		</p>
 		<h2 class="cvField">Education</h2>
 		<p>
@@ -63,7 +62,15 @@
 		</p>
 		<h2 class="cvField">Work</h2>
 		<p class="cvEntry">
-			<strong>Installation Programmer</strong> : September 2014 -  <br>
+			<strong>Algorithmic Composer</strong> : September 2015 - <br>
+			<span class="sub">Maintained an expanded a Python musical composition engine <a href="http://www.humtap.com/">Humtap</a>, a San Francisco startup.</span>
+		<p>
+		<p class="cvEntry">
+			<strong>Technical Artist</strong> : January 2015 - September 2015 <br>
+			<span class="sub">Graphical programmer for <a href="http://aaronk.is/2XXM2I3L474DK5DT/InnerFriend_trailer.mp4">The InnerFriend</a>, an XBOX One game built in Unity3D. Worked directly with artists in integrating assets.</span>
+		<p>
+		<p class="cvEntry">
+			<strong>Installation Programmer</strong> : September 2014 - December 2014 <br>
 			<span class="sub">Worked with <a href="playmind.com">PLAYMIND</a> and the city of Joliette, QC to create an interactive installation for the 150th anniversary of the city.</span>
 		<p>
 		<p class="cvEntry">
