Only single category

--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
 			<p class='description'></p>
 			<div id='closeSwitch'></div>
 		</div>
-		<div class="panel"id="interaction">
-			<h2>INTERACTION DESIGN</h2>
-		</div><!--- Don't mind me, just removing some whitespace!
-	--><div class="panel"id="webdesign">
-			<h2>WEB DESIGN</h2>
+		<div class="panel"id="all">
 		</div>
 	</div>
 
