--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++<br>
 			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL<br>
-			<strong>Frameworks</strong> - Unity3D, OpenFrameworks, MaxMSP, Matlab<br>
-			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino<br>
+			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks, MaxMSP<br>
+			<strong>Art Asset Creation</strong> - Photoshop, Maya, Blender, AfterEffects<br>
+			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino, Raspberry Pi<br>
 		</p>
 		<h2 class="cvField">Education</h2>
 		<p>
@@ -58,7 +59,11 @@
 		</p>
 		<h2 class="cvField">Work</h2>
 			<p class="cvEntry">
-				<strong>Algorithmic Composer</strong> : September 2015 - <br>
+				<strong>Technical Artist</strong> : December 2016 - <br>
+				<span class="sub">Designed and developed effects for <a href="https://getscribblechat.com/">ScribbleChat</a>, a webGL-based iOS app for creative text messaging.</span>
+			<p>
+			<p class="cvEntry">
+				<strong>Algorithmic Composer</strong> : September 2015 - October 2016<br>
 				<span class="sub">Maintained an expanded a Python musical composition engine <a href="http://www.humtap.com/">Humtap</a>, a San Francisco startup.</span>
 			<p>
 			<p class="cvEntry">
@@ -92,13 +97,15 @@
 		<p><a href="mailto:ak@aaronk.is?Subject=Hey%20Aaron!" target="_top">ak@aaronk.is</a></p>
 		<h2 class="contactField">Github</h2>
 		<p><a href="https://github.com/mysterydate">mysteryDate</a></p>
+		<h2 class="contactField">Instagram</h2>
+		<p><a href="https://www.instagram.com/_mysterydate/">@_mysteryDate</a></p>
 		<h2 class="contactField">Twitter</h2>
 		<p><a href="https://twitter.com/_mysteryDate">@_mysteryDate</a></p>
 		<p><span class="sub">I'm always on the hunt for fun contracts. Give me a ring!</span></p>
 	</div>
 
 	<div id="footer">
-		<p class="sub">&copy; Copyright 2016 - Aaron Krajeski</p>
+		<p class="sub">&copy; Copyright 2017 - Aaron Krajeski</p>
 	</div>
 
 </body>
