Change some wording

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="mainTitle">
 		<div id="name">AARON KRAJESKI</div>
 		<img id="gifLogo" src="bin/logo-frame1.jpg"></img>
-		<h2 class="startHidden">Multimedia Technologist</h2>
+		<h2 class="startHidden">Creative Coder</h2>
 	</div>
 	<div id="mainNavigation" class="startHidden">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
@@ -101,7 +101,6 @@
 		<p><a href="https://www.instagram.com/_mysterydate/">@_mysteryDate</a></p>
 		<h2 class="contactField">Twitter</h2>
 		<p><a href="https://twitter.com/_mysteryDate">@_mysteryDate</a></p>
-		<p><span class="sub">I'm always on the hunt for fun contracts. Give me a ring!</span></p>
 	</div>
 
 	<div id="footer">
