--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="section" id="cv">
 		<h2 class="cvField">Skills</h2>
 		<p>
-			<strong>Programming Languages</strong> - Python, Javascript, C++<br>
+			<strong>Programming Languages</strong> - Python, Javascript, C++, C#<br>
 			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL<br>
 			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks, MaxMSP<br>
 			<strong>Art Asset Creation</strong> - Photoshop, Maya, Blender, AfterEffects<br>
