--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="mainTitle">
 		<div id="name">AARON KRAJESKI</div>
 		<img id="gifLogo" src="bin/logo-frame1.jpg"></img>
-		<h2 class="startHidden">Creative Coder</h2>
+		<h2 class="startHidden">Software Engineer</h2>
 	</div>
 	<div id="mainNavigation" class="startHidden">
 		<div class="selected"><h2>PORTFOLIO</h2></div>
