--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
 	<title>AARON KRAJESKI</title>
 	<link rel="icon" href="bin/favicon.ico">
-	<!-- ANALYTICS -->
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-56302720-1', 'auto');
-	  ga('send', 'pageview');
-	</script>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- start Mixpanel --><script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
+0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
+mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/velocity.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript">
+    mixpanel.track("Site Opened");
+  </script>
 </head>
 <body>
 
@@ -43,13 +40,12 @@
 	</div>
 
 	<div class="section" id="cv">
+    <a href="./cv.pdf">PDF Version</a>
 		<h2 class="cvField">Skills</h2>
 		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++, C#<br>
+			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks<br>
 			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL<br>
-			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks, MaxMSP<br>
-			<strong>Art Asset Creation</strong> - Photoshop, Maya, Blender, AfterEffects<br>
-			<strong>Protocols and Hardware</strong> - OSC, MIDI, Kinect, Arduino, Raspberry Pi<br>
 		</p>
 		<h2 class="cvField">Education</h2>
 		<p>
@@ -59,15 +55,15 @@
 		</p>
 		<h2 class="cvField">Work</h2>
 			<p class="cvEntry">
-				<strong>Technical Artist</strong> : December 2016 - <br>
+				<strong>Full Stack Engineer</strong> : December 2016 - <br>
 				<span class="sub">Designed and developed effects for <a href="https://getscribblechat.com/">ScribbleChat</a>, a webGL-based iOS app for creative text messaging.</span>
 			<p>
 			<p class="cvEntry">
-				<strong>Algorithmic Composer</strong> : September 2015 - October 2016<br>
+				<strong>Full Stack Engineer</strong> : September 2015 - October 2016<br>
 				<span class="sub">Maintained an expanded a Python musical composition engine <a href="http://www.humtap.com/">Humtap</a>, a San Francisco startup.</span>
 			<p>
 			<p class="cvEntry">
-				<strong>Technical Artist</strong> : January 2015 - September 2015 <br>
+				<strong>Software Engineer/Technical Artist</strong> : January 2015 - September 2015 <br>
 				<span class="sub">Graphical programmer for <a href="http://aaronk.is/2XXM2I3L474DK5DT/InnerFriend_trailer.mp4">The InnerFriend</a>, an XBOX One game built in Unity3D. Worked directly with artists in integrating assets.</span>
 			<p>
 			<p class="cvEntry">
@@ -97,6 +93,8 @@
 		<p><a href="mailto:ak@aaronk.is?Subject=Hey%20Aaron!" target="_top">ak@aaronk.is</a></p>
 		<h2 class="contactField">Github</h2>
 		<p><a href="https://github.com/mysterydate">mysteryDate</a></p>
+		<h2 class="contactField">LinkedIn</h2>
+		<p><a href="https://www.linkedin.com/in/aaron-krajeski-63322a81/">Aaron Krajeski</a></p>
 		<h2 class="contactField">Instagram</h2>
 		<p><a href="https://www.instagram.com/_mysterydate/">@_mysteryDate</a></p>
 		<h2 class="contactField">Twitter</h2>
@@ -104,7 +102,7 @@
 	</div>
 
 	<div id="footer">
-		<p class="sub">&copy; Copyright 2017 - Aaron Krajeski</p>
+		<p class="sub">&copy; Copyright 2018 - Aaron Krajeski</p>
 	</div>
 
 </body>
