Get fades working for mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
 		<h2 class="cvField">Skills</h2>
 		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++, C#<br>
-			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks<br>
+			<strong>Frameworks</strong> - THREE.js, Unity3D, Unreal, Reactjs, OpenFrameworks<br>
+			<strong>Backend</strong> - Webpack, Docker, AWS, PosgreSQL, Node.js<br>
 			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL<br>
 		</p>
 		<h2 class="cvField">Education</h2>
