Still working on that overlay stuff

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
 		</div>
 		<div class="panel"id="all">
 		</div>
+		<div id="portfolio-overlay">
+			<div class="screen"></div>
+			<div class="text"></div>
+		</div>
 	</div>
 
 	<div class="section" id="cv">
