Update cv stuff

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
 		<h2 class="cvField">Skills</h2>
 		<p>
 			<strong>Programming Languages</strong> - Python, Javascript, C++, C#<br>
-			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks<br>
-			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL<br>
+			<strong>Frameworks</strong> - THREE.js, Unity3D, OpenFrameworks, JQuery, React<br>
+			<strong>Backend</strong> - Webpack, Docker, AWS, PosgreSQL, Node.js<br>
+			<strong>Graphics APIs</strong> - Direct3D, OpenGL, WebGL, HLSL, GLSL, CUDA<br>
 		</p>
 		<h2 class="cvField">Education</h2>
 		<p>
@@ -64,7 +65,7 @@ mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
 			<p>
 			<p class="cvEntry">
 				<strong>Software Engineer/Technical Artist</strong> : January 2015 - September 2015 <br>
-				<span class="sub">Graphical programmer for <a href="http://aaronk.is/2XXM2I3L474DK5DT/InnerFriend_trailer.mp4">The InnerFriend</a>, an XBOX One game built in Unity3D. Worked directly with artists in integrating assets.</span>
+				<span class="sub">Graphical programmer for <a href="theinnerfriend.com">The InnerFriend</a>, an XBOX One game built in Unity3D. Worked directly with artists in integrating assets.</span>
 			<p>
 			<p class="cvEntry">
 				<strong>Installation Programmer</strong> : September 2014 - December 2014 <br>
@@ -73,10 +74,6 @@ mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
 			<p class="cvEntry">
 				<strong>Museum Exhibit Programmer</strong> : April 2014 - July 2014 <br>
 				<span class="sub">Worked with <a href="playmind.com">PLAYMIND</a> and La Mus&eacute;e Regional D'Argenteuil to create an interactive exhibit concerning the history of Argenteuil, QC</span>
-			</p>
-			<p class="cvEntry">
-				<strong>Independent Web Designer</strong> : August 2013 - <br>
-				<span class="sub">Independently created websites such as <a href="boulevardtranslation.com">boulevardtranslation.com</a> and <a href="elrichman.com">elrichman.com</a>.</span>
 			</p>
 			<p class="cvEntry">
 				<strong>User Interface Designer</strong> : February 2013 - December 2013 <br>
