Use more reliable email

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ mixpanel.init("6f775fa13e6bc3a31252be78b49052da");</script><!-- end Mixpanel -->
 
 	<div class="section" id="contact">
 		<h2 class="contactField">Email</h2>
-		<p><a href="mailto:ak@aaronk.is?Subject=Hey%20Aaron!" target="_top">ak@aaronk.is</a></p>
+		<p><a href="mailto:krajeski@gmail.com?Subject=Hey%20Aaron!" target="_top">krajeski@gmail.com</a></p>
 		<h2 class="contactField">Github</h2>
 		<p><a href="https://github.com/mysterydate">mysteryDate</a></p>
 		<h2 class="contactField">LinkedIn</h2>
