--- a/sun.html
+++ b/sun.html
@@ -76,11 +76,58 @@ function draw() {
     + minSuns;
   for (let i = Math.floor(numSuns - 1); i >= 0; i--) {
     const j = i / numSuns;
+
+    let rAlpha = 1 / (numSuns ** 0.5) * ((-j + 1) + 1);
+    const rAdjust = (1 - minimumAlpha) * noise(t / (fgColorPeriod * 1.07) + 612)
+      + minimumAlpha;
+    rAlpha *= rAdjust;
+    if (i == Math.floor(numSuns - 1) && i != 0) {
+      rAlpha *= numSuns - Math.floor(numSuns);
+    }
+    // Triangle
+    const tColor = noiseColor(t, seed + 27, fgColorPeriod, 2 * j *
+      noise(t / fgColorPeriod / 1.32));
+    let tRotation;
+    tRotation = Math.PI * 2 * noise(t / (motionPeriod - 0.39) + 913 + j);
+    // if (i % 2 == 0) {
+    //   tRotation = Math.PI * 2 * noise(t / (motionPeriod - 0.39) + 913 + j);
+    // } else {
+    //   tRotation = Math.PI * 2 * noise(t / (motionPeriod - 0.39) + 913 + (i - 1)/numSuns) + Math.PI;
+    // }
+    const tSize = r/4 * noise(t / motionPeriod + 1351 + j) + r/4;
+    ctx.beginPath();
+    ctx.translate(w/2, h/2);
+    ctx.rotate(tRotation)
+    ctx.moveTo(0, -tSize);
+    let theta = Math.PI / 180 * 30;
+    ctx.lineTo(tSize * Math.cos(theta), tSize * Math.sin(theta))
+    ctx.lineTo(tSize * -Math.cos(theta), tSize * Math.sin(theta))
+    ctx.fillStyle = `rgba(${tColor[0]}, ${tColor[1]}, ${tColor[2]}, ${rAlpha})`;
+    ctx.fill();
+    ctx.setTransform();
+
+    // Rectangle
+    const xLength = 6 * r/8 * noise(t / motionPeriod + 371 + j) + r/8;
+    const yLength = 6 * r/8 * noise(t / (motionPeriod + 0.53) + 461 + j) + r/8;
+    // const yLength = xLength;
+    const rectRotation = Math.PI * 2 * noise(t / (motionPeriod - 0.49) + 711 + j);
+    // const rectRotation = 0;
+    const rColor = noiseColor(t, seed + 124, fgColorPeriod, 2 * j *
+      noise(t / fgColorPeriod / 1.02));
+    // ctx.beginPath();
+    // ctx.translate(w/2, h/2);
+    // ctx.rotate(rectRotation);
+    // ctx.rect(-xLength/2, -yLength/2, xLength, yLength);
+    // ctx.fillStyle = `rgba(${rColor[0]}, ${rColor[1]}, ${rColor[2]}, ${rAlpha})`;
+    // ctx.fill();
+    // ctx.setTransform();
+
+    // Ellipse
     const xRadius = 3 * r/8 * noise(t / motionPeriod + 430 + j) + r/8;
-    const yRadius = 3 * r/8 * noise(t / (motionPeriod + 0.53) + 732 + j) + r/8;
+    // const yRadius = 3 * r/8 * noise(t / (motionPeriod + 0.53) + 732 + j) + r/8;
+    const yRadius = xRadius;
     const rotation = Math.PI * 2 * noise(t / (motionPeriod - 0.49) + 532 + j);
     // const rotation = 0;
-
     const fg = noiseColor(t, seed + 1124, fgColorPeriod, 2 * j *
       noise(t / fgColorPeriod / 1.02));
     let alpha = 1 / (numSuns ** 0.5) * ((-j + 1) + 1);
@@ -90,34 +137,10 @@ function draw() {
     if (i == Math.floor(numSuns - 1) && i != 0) {
       alpha *= numSuns - Math.floor(numSuns);
     }
-
     ctx.beginPath();
     ctx.ellipse(w/2, h/2, xRadius, yRadius, rotation, 0, Math.PI * 2);
     ctx.fillStyle = `rgba(${fg[0]}, ${fg[1]}, ${fg[2]}, ${alpha})`;
     ctx.fill();
-
-    const xLength = 6 * r/8 * noise(t / motionPeriod + 371 + j) + r/8;
-    const yLength = 6 * r/8 * noise(t / (motionPeriod + 0.53) + 461 + j) + r/8;
-    // const rectRotation = Math.PI * 2 * noise(t / (motionPeriod - 0.49) + 711 + j);
-    const rectRotation = 0;
-    const rColor = noiseColor(t, seed + 124, fgColorPeriod, 2 * j *
-      noise(t / fgColorPeriod / 1.02));
-    let rAlpha = 1 / (numSuns ** 0.5) * ((-j + 1) + 1);
-    const rAdjust = (1 - minimumAlpha) * noise(t / (fgColorPeriod * 1.07) + 612)
-      + minimumAlpha;
-    rAlpha *= rAdjust;
-    if (i == Math.floor(numSuns - 1) && i != 0) {
-      rAlpha *= numSuns - Math.floor(numSuns);
-    }
-
-    ctx.beginPath();
-    ctx.translate(w/2, h/2);
-    ctx.rotate(rectRotation);
-    ctx.rect(-xLength/2, -yLength/2, xLength, yLength);
-    ctx.fillStyle = `rgba(${rColor[0]}, ${rColor[1]}, ${rColor[2]}, ${rAlpha})`;
-    ctx.fill();
-    ctx.setTransform();
-
   }
   requestAnimationFrame(draw);
 }
