--- a/star.html
+++ b/star.html
@@ -73,7 +73,7 @@ const starPeriod = 10.12;
 
 let numPoints = 8;
 function draw() {
-  let t = performance.now() / 1000 + seed;
+  let t = performance.now() / 5000 + seed;
   const bgColor = noiseColor(t, seed + 3124, bgColorPeriod, 0);
   ctx.fillStyle = `rgb(${bgColor[0]}, ${bgColor[1]}, ${bgColor[2]})`;
   ctx.fillRect(0, 0, w, h);
@@ -92,11 +92,11 @@ function draw() {
       alpha *= numStars - Math.floor(numStars);
     }
 
-    const fgColor = noiseColor(t, seed + 27, fgColorPeriod, j *
+    const fgColor = noiseColor(t, seed + 27, fgColorPeriod, 2 * j *
       noise(t / fgColorPeriod / 1.32));
-    let rotation = Math.PI * 2 * noise(t / (motionPeriod - 0.39) / 5 + 913 + j * noise(t / motionPeriod));
-    let r1 = r/2 * noise(t / motionPeriod * 5 + 1351 + j);
-    let r2 = r/2 * noise(t / motionPeriod * 5.5 + 3381 + j);
+    let rotation = Math.PI * 2 * noise(t / (motionPeriod - 0.39) / 5 + 913 + j / 2 * noise(t / motionPeriod));
+    let r1 = r/2 * noise(t / motionPeriod * 5 + 1351 + j / 2);
+    let r2 = r/2 * noise(t / motionPeriod * 5.5 + 3381 + j / 2);
     ctx.translate(w/2, h/2);
     ctx.rotate(rotation)
     ctx.beginPath();
